// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`column_parallel_multi_measure 1`] = `
{
  "annotation": {},
  "chartType": "columnParallel",
  "config": {
    "columnParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelOverlap": true,
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "stackCornerRadius": [
        4,
        4,
        0,
        0,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "columnParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelOverlap": true,
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "stackCornerRadius": [
          4,
          4,
          0,
          0,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "east-A-利润-profit",
      "__Dim_Color__": "east-A-利润",
      "__Dim_Detail__": "east-A-利润",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 10,
        "region": "east",
        "sales": 20,
      },
      "city": "A",
      "count": 100,
      "date": "2019",
      "profit": 10,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-A-销售额-sales",
      "__Dim_Color__": "east-A-销售额",
      "__Dim_Detail__": "east-A-销售额",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 10,
        "region": "east",
        "sales": 20,
      },
      "city": "A",
      "count": 100,
      "date": "2019",
      "region": "east",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "east-B-利润-profit",
      "__Dim_Color__": "east-B-利润",
      "__Dim_Detail__": "east-B-利润",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 30,
        "region": "east",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2019",
      "profit": 30,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-B-销售额-sales",
      "__Dim_Color__": "east-B-销售额",
      "__Dim_Detail__": "east-B-销售额",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 30,
        "region": "east",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2019",
      "region": "east",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "west-A-利润-profit",
      "__Dim_Color__": "west-A-利润",
      "__Dim_Detail__": "west-A-利润",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 15,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 15,
        "region": "west",
        "sales": 44,
      },
      "city": "A",
      "count": 100,
      "date": "2019",
      "profit": 15,
      "region": "west",
    },
    {
      "__Dim_ColorId__": "west-A-销售额-sales",
      "__Dim_Color__": "west-A-销售额",
      "__Dim_Detail__": "west-A-销售额",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 44,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 15,
        "region": "west",
        "sales": 44,
      },
      "city": "A",
      "count": 100,
      "date": "2019",
      "region": "west",
      "sales": 44,
    },
    {
      "__Dim_ColorId__": "west-B-利润-profit",
      "__Dim_Color__": "west-B-利润",
      "__Dim_Detail__": "west-B-利润",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 50,
        "region": "west",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2019",
      "profit": 50,
      "region": "west",
    },
    {
      "__Dim_ColorId__": "west-B-销售额-sales",
      "__Dim_Color__": "west-B-销售额",
      "__Dim_Detail__": "west-B-销售额",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 50,
        "region": "west",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2019",
      "region": "west",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "east-A-利润-profit",
      "__Dim_Color__": "east-A-利润",
      "__Dim_Detail__": "east-A-利润",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 15,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 15,
        "region": "east",
        "sales": 21,
      },
      "city": "A",
      "count": 100,
      "date": "2020",
      "profit": 15,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-A-销售额-sales",
      "__Dim_Color__": "east-A-销售额",
      "__Dim_Detail__": "east-A-销售额",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 21,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 15,
        "region": "east",
        "sales": 21,
      },
      "city": "A",
      "count": 100,
      "date": "2020",
      "region": "east",
      "sales": 21,
    },
    {
      "__Dim_ColorId__": "east-B-利润-profit",
      "__Dim_Color__": "east-B-利润",
      "__Dim_Detail__": "east-B-利润",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 1,
        "region": "east",
        "sales": 10,
      },
      "city": "B",
      "count": 100,
      "date": "2020",
      "profit": 1,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-B-销售额-sales",
      "__Dim_Color__": "east-B-销售额",
      "__Dim_Detail__": "east-B-销售额",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 1,
        "region": "east",
        "sales": 10,
      },
      "city": "B",
      "count": 100,
      "date": "2020",
      "region": "east",
      "sales": 10,
    },
    {
      "__Dim_ColorId__": "west-A-利润-profit",
      "__Dim_Color__": "west-A-利润",
      "__Dim_Detail__": "west-A-利润",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 35,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 35,
        "region": "west",
        "sales": 40,
      },
      "city": "A",
      "count": 100,
      "date": "2020",
      "profit": 35,
      "region": "west",
    },
    {
      "__Dim_ColorId__": "west-A-销售额-sales",
      "__Dim_Color__": "west-A-销售额",
      "__Dim_Detail__": "west-A-销售额",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 35,
        "region": "west",
        "sales": 40,
      },
      "city": "A",
      "count": 100,
      "date": "2020",
      "region": "west",
      "sales": 40,
    },
    {
      "__Dim_ColorId__": "west-B-利润-profit",
      "__Dim_Color__": "west-B-利润",
      "__Dim_Detail__": "west-B-利润",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 55,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 55,
        "region": "west",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2020",
      "profit": 55,
      "region": "west",
    },
    {
      "__Dim_ColorId__": "west-B-销售额-sales",
      "__Dim_Color__": "west-B-销售额",
      "__Dim_Detail__": "west-B-销售额",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 55,
        "region": "west",
        "sales": 60,
      },
      "city": "B",
      "count": 100,
      "date": "2020",
      "region": "west",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "east-A-利润-profit",
      "__Dim_Color__": "east-A-利润",
      "__Dim_Detail__": "east-A-利润",
      "__Dim_X__": "2021",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 20,
        "region": "east",
        "sales": 30,
      },
      "city": "A",
      "count": 100,
      "date": "2021",
      "profit": 20,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-A-销售额-sales",
      "__Dim_Color__": "east-A-销售额",
      "__Dim_Detail__": "east-A-销售额",
      "__Dim_X__": "2021",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 20,
        "region": "east",
        "sales": 30,
      },
      "city": "A",
      "count": 100,
      "date": "2021",
      "region": "east",
      "sales": 30,
    },
    {
      "__Dim_ColorId__": "east-B-利润-profit",
      "__Dim_Color__": "east-B-利润",
      "__Dim_Detail__": "east-B-利润",
      "__Dim_X__": "2021",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 2,
        "region": "east",
        "sales": 55,
      },
      "city": "B",
      "count": 100,
      "date": "2021",
      "profit": 2,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-B-销售额-sales",
      "__Dim_Color__": "east-B-销售额",
      "__Dim_Detail__": "east-B-销售额",
      "__Dim_X__": "2021",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 55,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 2,
        "region": "east",
        "sales": 55,
      },
      "city": "B",
      "count": 100,
      "date": "2021",
      "region": "east",
      "sales": 55,
    },
    {
      "__Dim_ColorId__": "west-A-利润-profit",
      "__Dim_Color__": "west-A-利润",
      "__Dim_Detail__": "west-A-利润",
      "__Dim_X__": "2021",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 40,
        "region": "west",
        "sales": 75,
      },
      "city": "A",
      "count": 100,
      "date": "2021",
      "profit": 40,
      "region": "west",
    },
    {
      "__Dim_ColorId__": "west-A-销售额-sales",
      "__Dim_Color__": "west-A-销售额",
      "__Dim_Detail__": "west-A-销售额",
      "__Dim_X__": "2021",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 75,
      "__OriginalData__": {
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 40,
        "region": "west",
        "sales": 75,
      },
      "city": "A",
      "count": 100,
      "date": "2021",
      "region": "west",
      "sales": 75,
    },
    {
      "__Dim_ColorId__": "west-B-利润-profit",
      "__Dim_Color__": "west-B-利润",
      "__Dim_Detail__": "west-B-利润",
      "__Dim_X__": "2021",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 60,
        "region": "west",
        "sales": 65,
      },
      "city": "B",
      "count": 100,
      "date": "2021",
      "profit": 60,
      "region": "west",
    },
    {
      "__Dim_ColorId__": "west-B-销售额-sales",
      "__Dim_Color__": "west-B-销售额",
      "__Dim_Detail__": "west-B-销售额",
      "__Dim_X__": "2021",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 65,
      "__OriginalData__": {
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 60,
        "region": "west",
        "sales": 65,
      },
      "city": "B",
      "count": 100,
      "date": "2021",
      "region": "west",
      "sales": 65,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 24,
          "max": 75,
          "min": 1,
          "sum": 873,
        },
      },
      "id": "columnParallel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "east-A-利润-profit": "east-A-利润",
          "east-A-销售额-sales": "east-A-销售额",
          "east-B-利润-profit": "east-B-利润",
          "east-B-销售额-sales": "east-B-销售额",
          "west-A-利润-profit": "west-A-利润",
          "west-A-销售额-sales": "west-A-销售额",
          "west-B-利润-profit": "west-B-利润",
          "west-B-销售额-sales": "west-B-销售额",
        },
        "colorItems": [
          "east-A-利润-profit",
          "east-A-销售额-sales",
          "east-B-利润-profit",
          "east-B-销售额-sales",
          "west-A-利润-profit",
          "west-A-销售额-sales",
          "west-B-利润-profit",
          "west-B-销售额-sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "日期",
      "encoding": "xAxis",
      "id": "date",
    },
    {
      "alias": "区域",
      "encoding": "color",
      "id": "region",
    },
    {
      "alias": "城市",
      "encoding": "color",
      "id": "city",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "region",
      "city",
      "__MeaName__",
    ],
    "detail": [
      "region",
      "city",
      "__MeaName__",
    ],
    "label": [
      "city",
      "count",
    ],
    "tooltip": [
      "date",
      "region",
      "city",
      "count",
    ],
    "x": [
      "date",
    ],
    "y": [
      "profit",
      "sales",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "利润",
      "id": "profit",
    },
    {
      "alias": "销售额",
      "id": "sales",
    },
  ],
}
`;

exports[`column_parallel_multi_measure 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "lineWidth": 1,
    },
  },
  "color": {
    "domain": [
      "east-A-利润-profit",
      "east-A-销售额-sales",
      "east-B-利润-profit",
      "east-B-销售额-sales",
      "west-A-利润-profit",
      "west-A-销售额-sales",
      "west-B-利润-profit",
      "west-B-销售额-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "columnParallel",
    "values": [
      {
        "__Dim_ColorId__": "east-A-利润-profit",
        "__Dim_Color__": "east-A-利润",
        "__Dim_Detail__": "east-A-利润",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 10,
          "region": "east",
          "sales": 20,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 10,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-A-销售额-sales",
        "__Dim_Color__": "east-A-销售额",
        "__Dim_Detail__": "east-A-销售额",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 10,
          "region": "east",
          "sales": 20,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "region": "east",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "east-B-利润-profit",
        "__Dim_Color__": "east-B-利润",
        "__Dim_Detail__": "east-B-利润",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 30,
          "region": "east",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 30,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-B-销售额-sales",
        "__Dim_Color__": "east-B-销售额",
        "__Dim_Detail__": "east-B-销售额",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 30,
          "region": "east",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "region": "east",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "west-A-利润-profit",
        "__Dim_Color__": "west-A-利润",
        "__Dim_Detail__": "west-A-利润",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 15,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 15,
          "region": "west",
          "sales": 44,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "profit": 15,
        "region": "west",
      },
      {
        "__Dim_ColorId__": "west-A-销售额-sales",
        "__Dim_Color__": "west-A-销售额",
        "__Dim_Detail__": "west-A-销售额",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 44,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2019",
          "profit": 15,
          "region": "west",
          "sales": 44,
        },
        "city": "A",
        "count": 100,
        "date": "2019",
        "region": "west",
        "sales": 44,
      },
      {
        "__Dim_ColorId__": "west-B-利润-profit",
        "__Dim_Color__": "west-B-利润",
        "__Dim_Detail__": "west-B-利润",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 50,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "profit": 50,
        "region": "west",
      },
      {
        "__Dim_ColorId__": "west-B-销售额-sales",
        "__Dim_Color__": "west-B-销售额",
        "__Dim_Detail__": "west-B-销售额",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2019",
          "profit": 50,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2019",
        "region": "west",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "east-A-利润-profit",
        "__Dim_Color__": "east-A-利润",
        "__Dim_Detail__": "east-A-利润",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 15,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 15,
          "region": "east",
          "sales": 21,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 15,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-A-销售额-sales",
        "__Dim_Color__": "east-A-销售额",
        "__Dim_Detail__": "east-A-销售额",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 21,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 15,
          "region": "east",
          "sales": 21,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "region": "east",
        "sales": 21,
      },
      {
        "__Dim_ColorId__": "east-B-利润-profit",
        "__Dim_Color__": "east-B-利润",
        "__Dim_Detail__": "east-B-利润",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 1,
          "region": "east",
          "sales": 10,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 1,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-B-销售额-sales",
        "__Dim_Color__": "east-B-销售额",
        "__Dim_Detail__": "east-B-销售额",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 1,
          "region": "east",
          "sales": 10,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "region": "east",
        "sales": 10,
      },
      {
        "__Dim_ColorId__": "west-A-利润-profit",
        "__Dim_Color__": "west-A-利润",
        "__Dim_Detail__": "west-A-利润",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 35,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 35,
          "region": "west",
          "sales": 40,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "profit": 35,
        "region": "west",
      },
      {
        "__Dim_ColorId__": "west-A-销售额-sales",
        "__Dim_Color__": "west-A-销售额",
        "__Dim_Detail__": "west-A-销售额",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2020",
          "profit": 35,
          "region": "west",
          "sales": 40,
        },
        "city": "A",
        "count": 100,
        "date": "2020",
        "region": "west",
        "sales": 40,
      },
      {
        "__Dim_ColorId__": "west-B-利润-profit",
        "__Dim_Color__": "west-B-利润",
        "__Dim_Detail__": "west-B-利润",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 55,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 55,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "profit": 55,
        "region": "west",
      },
      {
        "__Dim_ColorId__": "west-B-销售额-sales",
        "__Dim_Color__": "west-B-销售额",
        "__Dim_Detail__": "west-B-销售额",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2020",
          "profit": 55,
          "region": "west",
          "sales": 60,
        },
        "city": "B",
        "count": 100,
        "date": "2020",
        "region": "west",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "east-A-利润-profit",
        "__Dim_Color__": "east-A-利润",
        "__Dim_Detail__": "east-A-利润",
        "__Dim_X__": "2021",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 20,
          "region": "east",
          "sales": 30,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 20,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-A-销售额-sales",
        "__Dim_Color__": "east-A-销售额",
        "__Dim_Detail__": "east-A-销售额",
        "__Dim_X__": "2021",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 20,
          "region": "east",
          "sales": 30,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "region": "east",
        "sales": 30,
      },
      {
        "__Dim_ColorId__": "east-B-利润-profit",
        "__Dim_Color__": "east-B-利润",
        "__Dim_Detail__": "east-B-利润",
        "__Dim_X__": "2021",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 2,
          "region": "east",
          "sales": 55,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 2,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-B-销售额-sales",
        "__Dim_Color__": "east-B-销售额",
        "__Dim_Detail__": "east-B-销售额",
        "__Dim_X__": "2021",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 55,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 2,
          "region": "east",
          "sales": 55,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "region": "east",
        "sales": 55,
      },
      {
        "__Dim_ColorId__": "west-A-利润-profit",
        "__Dim_Color__": "west-A-利润",
        "__Dim_Detail__": "west-A-利润",
        "__Dim_X__": "2021",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 40,
          "region": "west",
          "sales": 75,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "profit": 40,
        "region": "west",
      },
      {
        "__Dim_ColorId__": "west-A-销售额-sales",
        "__Dim_Color__": "west-A-销售额",
        "__Dim_Detail__": "west-A-销售额",
        "__Dim_X__": "2021",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 75,
        "__OriginalData__": {
          "city": "A",
          "count": 100,
          "date": "2021",
          "profit": 40,
          "region": "west",
          "sales": 75,
        },
        "city": "A",
        "count": 100,
        "date": "2021",
        "region": "west",
        "sales": 75,
      },
      {
        "__Dim_ColorId__": "west-B-利润-profit",
        "__Dim_Color__": "west-B-利润",
        "__Dim_Detail__": "west-B-利润",
        "__Dim_X__": "2021",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 60,
          "region": "west",
          "sales": 65,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "profit": 60,
        "region": "west",
      },
      {
        "__Dim_ColorId__": "west-B-销售额-sales",
        "__Dim_Color__": "west-B-销售额",
        "__Dim_Detail__": "west-B-销售额",
        "__Dim_X__": "2021",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 65,
        "__OriginalData__": {
          "city": "B",
          "count": 100,
          "date": "2021",
          "profit": 60,
          "region": "west",
          "sales": 65,
        },
        "city": "B",
        "count": 100,
        "date": "2021",
        "region": "west",
        "sales": 65,
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
    },
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [Function],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": "数量",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": [
    "__Dim_X__",
    "__Dim_Detail__",
  ],
  "yField": "__MeaValue__",
}
`;

exports[`column_parallel_multi_measure 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "east-A-利润-profit": "east-A-利润",
    "east-A-销售额-sales": "east-A-销售额",
    "east-B-利润-profit": "east-B-利润",
    "east-B-销售额-sales": "east-B-销售额",
    "west-A-利润-profit": "west-A-利润",
    "west-A-销售额-sales": "west-A-销售额",
    "west-B-利润-profit": "west-B-利润",
    "west-B-销售额-sales": "west-B-销售额",
  },
  "colorItems": [
    "east-A-利润",
    "east-A-销售额",
    "east-B-利润",
    "east-B-销售额",
    "west-A-利润",
    "west-A-销售额",
    "west-B-利润",
    "west-B-销售额",
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
